--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     margin: 0; 
     padding: 0;
     min-height: 100vh;
-    background-image: url('./Assets/Background Image.jpg');
+    background-image: url('/assets/Background Image.jpg');
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -172,4 +172,5 @@ h1, h2, h3{
     padding: 10px !important;
     min-height: 44px !important;
   }
+
 }
