--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: black;
 }
 
 .navbar {
@@ -174,3 +175,4 @@ h1, h2, h3{
   }
 
 }
+
