--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Georgia, serif;;
+    font-family: Georgia, serif;
     margin: 0; 
     padding: 0;
     min-height: 100vh;
@@ -175,4 +175,5 @@ h1, h2, h3{
   }
 
 }
+
 
